name:
  belka
version:
  0.1.3
homepage:
  https://github.com/nikita-volkov/belka
bug-reports:
  https://github.com/nikita-volkov/belka/issues
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2016, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/belka.git

library
  hs-source-dirs:
    library
  exposed-modules:
    Belka.Request
    Belka.ParseHead
    Belka.ParseBody
    Belka.ParseHeaders
    Belka.Interact
    Belka.IO
  other-modules:
    Belka.Potoki.Consumers
    Belka.Prelude
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    -- codecs:
    base64-bytestring ==1.*,
    json-bytes-builder >=0.5 && <0.6,
    -- streaming:
    potoki >=0.6 && <0.7,
    potoki-core >=1.1 && <1.2,
    -- parsing:
    aeson-value-parser >=0.12.2 && <0.13,
    attoparsec >=0.13 && <0.14,
    http-media >=0.6.4 && <0.8,
    -- 
    http-client ==0.5.*,
    http-client-tls >=0.3.4 && <0.4,
    http-types ==0.9.*,
    -- 
    aeson >=1.2 && <2,
    bytestring >=0.10 && <0.11,
    text >=1 && <2,
    unordered-containers >=0.2 && <0.3,
    hashable ==1.*,
    case-insensitive ==1.*,
    -- 
    semigroups >=0.18 && <0.19,
    mtl ==2.*,
    transformers >=0.4 && <0.6,
    bug >=1 && <2,
    base-prelude <2,
    base <5

test-suite tests
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    Main.hs
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    -- 
    belka,
    -- testing:
    tasty >=0.12 && <0.13,
    tasty-quickcheck >=0.9 && <0.10,
    tasty-hunit >=0.9 && <0.10,
    quickcheck-instances >=0.3.11 && <0.4,
    QuickCheck >=2.8.1 && <3,
    --
    bug ==1.0.*,
    rerebase >=1.1 && <2
